--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   },
   "homepage": "https://github.com/nsonnad/metalsmith-slug",
   "dependencies": {
-    "minimatch": "^0.3.0",
-    "slug": "^0.5.0"
+    "minimatch": "2.x",
+    "slug": "0.9.x"
   },
   "devDependencies": {
-    "metalsmith": "^0.10.0",
+    "metalsmith": "1.x",
     "tap": "^0.4.12",
     "tap-dot": "^0.2.3"
   }
